# Problem_Solving

./: CMakeLists.txt
Binary Trees/: LeetCode - 230 - Kth Smallest Element in a BST .cpp  LeetCode - 235 - Lowest Common Ancestor of a Binary Search Tree .cpp  LeetCode - 98 - Validate Binary Search Tree .cpp
Codeforces Div2/: A.1691 Beat The Odds (1691A).cpp  A.1946 Median of an Array (1946A).cpp  A.1954 Painting the Ribbon (1954A).cpp  A.1956 Nene's Game (1956A).cpp  A.1966 Card Exchange .cpp  B.1691  Shoe Shuffling (1691B).cpp  B.1946 Maximum Sum (1946B).cpp  B.1954 Make It Ugly (1954B).cpp  B.1956 Nene and the Card Game (1956B).cpp  B.1966 Rectangle Filling .cpp  B.219 Special Offer! Super Price 999 Bourles! (219B).cpp  B.222 Cosmic Tables (222B).cpp  B.230 T-pimes (230B).cpp  B.257 Playing Cubes (257B).cpp  B.271 Prime Matrix (271B).cpp  B.371 Fox Dividing Cheese (371B).cpp  B.378 Semifinals (378B).cpp  B.437 The Child and Set (437B).cpp  B.450 Jzzhu and Sequences (450B).cpp  B.479 Towers (479B).cpp  B.490 Queue (490B).cpp  B.518 Tanya and Postcard (518B).cpp  B.570 Simple Game (570B).cpp  B.588 Duff in Love (588B).cpp  B.610 Vika and Squares (610B).cpp  B.631 Print Check (631B).cpp  C.131 The World is a Theatre (131C).cpp  C.1691 Sum of Substrings (1691C).cpp  C.1895 Torn Lucky Ticket (1895C).cpp  C.1946 C. Tree Cutting (1946C).cpp  C.1954 Long Multiplication (1954C).cpp  C.1956 Nene's Magical Matrix (1956C).cpp  C.1966 Everything Nim .cpp  C.225 Barcode (225C).cpp  C.227 Flying Saucer Segments (227C).cpp  C.252 Points on Line (252C).cpp  C.253 Text Editor (253C).cpp  C.275 k-Multiple Free Set (275C).cpp  C.296 Greg and Array (296C).cpp  C.304 Lucky Permutation Triple (304C).cpp  (+31 more)
Codeforces Div3/: A.1941 Rudolf and the Ticket (1941A) .cpp  A.1945 Setting up Camp (1945A).cpp  B.1941 Rudolf and 121 (1941B).cpp  B.1945 Fireworks (1945B).cpp  C.1941 Rudolf and the Ugly String (1941C).cpp  C.1945 Left and Right Houses (1945C).cpp  C.1955 Inhabitant of the Deep Sea (1955C).cpp  D.1941 Rudolf and the Ball Game (1941D).cpp  D.1945 Seraphim the Owl(1945D).cpp  D.1955 Inaccurate Subsequence Search (1955D).cpp  E.1941 Rudolf and k Bridges (1941E).cpp  F.1941 Rudolf and imbalance (1941F).cpp
Dynamic Programming/: AtCoder - dp_I deque.cpp  AtCoder - dp_a Frog 1 .cpp  AtCoder - dp_b Frog 2.cpp  AtCoder - dp_c Vacation .cpp  AtCoder - dp_d Knapsack 1.cpp  AtCoder - dp_f LCS.cpp  AtCoder - dp_g Longest Path.cpp  AtCoder - dp_h Grid 1.cpp  AtCoder - dp_k Stones.cpp  AtCoder - dp_n Slimes.cpp  AtCoder dp_e Knapsack 2.cpp  Codeforces 1033C Permutation Game.cpp  Codeforces 1036C Classy Numbers.cpp  Codeforces 1042B Vitamins.cpp  Codeforces 1066F Yet another 2D Walking.cpp  Codeforces 1077F1 Pictures with Kittens.cpp  Codeforces 1133E K Balanced Teams.cpp  Codeforces 1154F Shovels Shop.cpp  Codeforces 118D Caesar's Legions.cpp  Codeforces 1195C Basketball Exercise.cpp  Codeforces 1245C Constanze's Machine.cpp  Codeforces 1272C Yet Another Broken Keyboard.cpp  Codeforces 1380C Create The Teams.cpp  Codeforces 1555C Coin Rows.cpp  Codeforces 1625C Road Optimization.cpp  Codeforces 189A Cut Ribbon.cpp  Codeforces 225C Barcode.cpp  Codeforces 270D Greenhouse Effect.cpp  Codeforces 35D Animals.cpp  Codeforces 366C Dima and Salad.cpp  Codeforces 431C k-Tree.cpp  Codeforces 456C Boredom.cpp  Codeforces 474D Flowers.cpp  Codeforces 478D Red-Green Towers.cpp  Codeforces 489C Given Length and Sum of Digits.cpp  Codeforces 506A Mr. Kitayuta, the Treasure Hunter.cpp  Codeforces 534B Covered Path.cpp  Codeforces 545C Woodcutters.cpp  Codeforces 550A Two Substrings.cpp  Codeforces 56D Changing a String.cpp  (+70 more)
Graphs/: A.115 Party.cpp  A1.1181 Add on a Tree.cpp  B.1020 Badge.cpp  B.1552 Running for Gold.cpp  B.216 Forming Teams.cpp  B.330 Road Construction.cpp  B.902 Coloring a Tree.cpp  C.1143 Queen.cpp  C.29 Mail Stamps.cpp  C.839 Journey.cpp  D.1611 Weights Assignment For Tree Edges.cpp  D.246 Colorful Graph.cpp  E.1176 Cover it.cpp  E.977 Cyclic Components.cpp
Number Theory/: Codeforces 1458A Row GCD.cpp  Codeforces 1900D Small GCD.cpp  Codeforces 235A LCM Challenge.cpp  Codeforces 284A Cows and Primitive Roots.cpp  Codeforces 664A Complicated GCD.cpp  Codeforces 735D Taxes.cpp  Codeforces 762A k-th divisor.cpp  UVA 10006 Carmichael Numbers.cpp  UVA 10106 Product.cpp  UVA 10168 Summation of Four Primes.cpp  UVA 10370 Above Average.cpp  UVA 10650 Determinate Prime.cpp  UVA 10789 Prime Frequency.cpp  UVA 160 Factors and Factorials.cpp  UVA 374 Big Mod.cpp  UVA 408 Uniform Generator.cpp  UVA 583 Prime Factors.cpp  UVA 713 Adding Reversed Numbers.cpp
Prefix Sum and Two pointers/: Codeforces 251A Points on Line .cpp  Codeforces 433B Kuriyama Mirai's Stones.cpp  Codeforces 816B Karen and Coffee.cpp  Codeforces 835C Star Sky.cpp  LeetCode 560 Subarray Sum Equals K .cpp  LeetCode 70 Climbing Stairs.cpp
Recursion and Backtracking/: Codeforces - 1323A - Even Subset Sum Problem.cpp  LeetCode - 17 - Letter Combinations of a Phone Number.cpp  LeetCode - 216 - Combination Sum III.cpp  LeetCode - 46 - Permutations.cpp  TopCoder 6680 RGB Street.cpp  UVA - 100 - The 3n+1  problem .cpp  UVA - 10344 - 23 out of 5.cpp  UVA - 10946 - You want what filled.cpp  UVA - 167 - The Sultan's Successors.cpp  UVA - 439 - Knight Moves.cpp  UVA - 524 - Prime Ring.cpp  UVA - 574 - Sum It Up.cpp  UVA - 750 - 8 Queens Chess Problem.cpp
STL/: Codeforces - 519B - A and B and Compilation Errors .cpp  UVA - 10815 - Andys_First_Dictionary.cpp  UVA - 10935 - Throwing_cards_away_I .cpp  UVA - 10954 - Add All.cpp  UVA - 11995 -I Can Guess the Data Structure! .cpp  UVA - 673 - Parentheses_Balance.cpp  UVA - 902 - Password Search.cpp
