cmake_minimum_required(VERSION 3.25)
project(Problem_Solving)

set(CMAKE_CXX_STANDARD 14)

add_executable(574
        "Recursion and Backtracking/UVA - 574 - Sum It Up.cpp")
add_executable(167
        "Recursion and Backtracking/UVA - 167 - The Sultan's Successors.cpp")
add_executable(439
        "Recursion and Backtracking/UVA - 439 - Knight Moves.cpp")
add_executable(100
        "Recursion and Backtracking/UVA - 100 - The 3n+1  problem .cpp")
add_executable(10946
        "Recursion and Backtracking/UVA - 10946 - You want what filled.cpp")
add_executable(10344
        "Recursion and Backtracking/UVA - 10344 - 23 out of 5.cpp")
