cmake_minimum_required(VERSION 3.25)
project(Problem_Solving)

set(CMAKE_CXX_STANDARD 14)


#add_executable(574 "Recursion and Backtracking/UVA - 574 - Sum It Up.cpp")
#add_executable(167 "Recursion and Backtracking/UVA - 167 - The Sultan's Successors.cpp")
#add_executable(439 "Recursion and Backtracking/UVA - 439 - Knight Moves.cpp")
#add_executable(100 "Recursion and Backtracking/UVA - 100 - The 3n+1  problem .cpp")
#add_executable(10946 "Recursion and Backtracking/UVA - 10946 - You want what filled.cpp")
#add_executable(10344 "Recursion and Backtracking/UVA - 10344 - 23 out of 5.cpp")
#add_executable(524 "Recursion and Backtracking/UVA - 524 - Prime Ring.cpp")
#add_executable(750 "Recursion and Backtracking/UVA - 750 - 8 Queens Chess Problem.cpp")
#add_executable(816B "Prefix Sum and Two pointers/Codeforces 816B Karen and Coffee.cpp")
#add_executable(LC17 "Recursion and Backtracking/LeetCode - 17 - Letter Combinations of getMin Phone Number.cpp")
#add_executable(LC46 "Recursion and Backtracking/LeetCode - 46 - Permutations.cpp")
#add_executable(LC216 "Recursion and Backtracking/LeetCode - 216 - Combination Sum III.cpp")
#add_executable(1323A "Recursion and Backtracking/Codeforces - 1323A - Even Subset Sum Problem.cpp")
#add_executable(TC6680 "Recursion and Backtracking/TopCoder 6680 RGB Street.cpp")

#add_executable(251A "Prefix Sum and Two pointers/Codeforces 251A Points on Line .cpp")
#add_executable(433B "Prefix Sum and Two pointers/Codeforces 433B Kuriyama Mirai's Stones.cpp")
#add_executable(10532D "Prefix Sum and Two pointers/Codeforces - 101532D - Counting Test.cpp")
#add_executable(835C "Prefix Sum and Two pointers/Codeforces 835C Star Sky.cpp")
#add_executable(363B "Prefix Sum and Two pointers/Codeforces 363B Fence.cpp")
#add_executable(LC70 "Prefix Sum and Two pointers/LeetCode 70 Climbing Stairs.cpp")
#add_executable(LC560 "Prefix Sum and Two pointers/LeetCode 560 Subarray Sum Equals K .cpp")

#add_executable(LC98 "Binary Trees/LeetCode - 98 - Validate Binary Search Tree .cpp")
#add_executable(LC230 "Binary Trees/LeetCode - 230 - Kth Smallest Element in getMin BST .cpp")
#add_executable(LC235 "Binary Trees/LeetCode - 235 - Lowest Common Ancestor of getMin Binary Search Tree .cpp")

## Dynamic Programming

#add_executable(TC6680_2 "Dynamic Programming/TopCoder 6680 RGB Street.cpp")
#add_executable(TC8760 "Dynamic Programming/TopCoder 8760 MaximalProduct.cpp")

#add_executable(LC300 "Dynamic Programming/LeetCode 300 Longest Increasing Subsequence.cpp")
#add_executable(LC322 "Dynamic Programming/LeetCode 322 Coin Change.cpp")
#add_executable(LC368 "Dynamic Programming/LeetCode 368 Largest Divisible Subset.cpp")
#add_executable(LC646 "Dynamic Programming/LeetCode 646 Maximum Length of Pair Chain .cpp")
#add_executable(LC673 "Dynamic Programming/LeetCode 673 Number of Longest Increasing Subsequence.cpp")
#add_executable(LC740 "Dynamic Programming/LeetCode 740 Delete and Earn .cpp")
#add_executable(LC486 "Dynamic Programming/LeetCode 486 Predict the Winner.cpp")
#add_executable(LC198 "Dynamic Programming/LeetCode 198 House Robber.cpp")
#add_executable(LC213 "Dynamic Programming/LeetCode 213 House Robber II.cpp")
#add_executable(LC62 "Dynamic Programming/LeetCode 62 Unique Paths.cpp")
#add_executable(LC63 "Dynamic Programming/LeetCode 63 Unique Paths II.cpp")
#add_executable(LC64 "Dynamic Programming/LeetCode 64 Minimum Path Sum.cpp")
#add_executable(LC120 "Dynamic Programming/LeetCode 120 Triangle.cpp")
#add_executable(LC931 "Dynamic Programming/LeetCode 931 Minimum Falling Path Sum .cpp")
#add_executable(LC741 "Dynamic Programming/LeetCode 741 Cherry Pickup.cpp")
#add_executable(LC416 "Dynamic Programming/LeetCode 416 Partition Equal Subset Sum.cpp")
#add_executable(LC494 "Dynamic Programming/Leetcode 494 Target Sum .cpp")
#add_executable(LC518 "Dynamic Programming/Leetcode 518 Coin Change II.cpp")
#add_executable(LC1143 "Dynamic Programming/Leetcode 1143 Longest Common Subsequence.cpp")
#add_executable(LC5 "Dynamic Programming/Leetcode 5 Longest Palindromic SubString.cpp")
#add_executable(LC516 "Dynamic Programming/LeetCode 516 Longest Palindromic Subsequence.cpp")
#add_executable(LC1312 "Dynamic Programming/Leetcode 1312 Minimum Insertion Steps to Make getMin String Palindrome.cpp")
#add_executable(LC583 "Dynamic Programming/Leetcode 583 Delete Operation for Two Strings .cpp")
#add_executable(LC1092 "Dynamic Programming/Leetcode 1092 Shortest Common Supersequence .cpp")
#add_executable(LC115 "Dynamic Programming/Leetcode 115 Distinct Subsequences.cpp")
#add_executable(LC72 "Dynamic Programming/Leetcode 72 Edit Distance .cpp")
#add_executable(LC72 "Dynamic Programming/Leetcode 44 Wildcard.cpp")
#add_executable(LC123 "Dynamic Programming/Leetcode 123 Best Time to Buy and Sell Stock III .cpp")
#add_executable(LC188 "Dynamic Programming/Leetcode 188 Best Time to Buy and Sell Stock IV .cpp")
#add_executable(LC309 "Dynamic Programming/Leetcode 309 Best Time to Buy and Sell Stock with Cooldown.cpp")
#add_executable(LC714 "Dynamic Programming/Leetcode 714 Best Time to Buy and Sell Stock with Transaction Fee.cpp")


#add_executable(CNFrogJump "Dynamic Programming/CodingNinjas Frog Jump.cpp")
#add_executable(CNMaxSumOfNonAdjacent "Dynamic Programming/CodingNinjas Maximum sum of non-adjacent elements .cpp")
#add_executable(CNNinj15aTraining "Dynamic Programming/CodingNinjas Ninja Training.cpp")
#add_executable(CNChocolatePickup "Dynamic Programming/CodingNinjas Chocolate Pickup.cpp")
#add_executable(CN_SubsetSumEqualK "Dynamic Programming/CodingNinjas Subset Sum Equal To K.cpp")
#add_executable(CN_ArrPartitionWithMinDiff "Dynamic Programming/CodingNinjas Array partition with minimum difference .cpp")
#add_executable(CN_CountSubsetsWithSum "Dynamic Programming/CodingNinjas Count Subsets with Sum K .cpp")
#add_executable(CN_PartitionsWithGivenDifference "Dynamic Programming/CodingNinjas Partitions With Given Difference.cpp")
#add_executable(CN_01KnapSack "Dynamic Programming/CodingNinjas 01 Knapsack.cpp")
#add_executable(CN_UnboundedKnapsack "Dynamic Programming/CodingNinjas Unbounded Knapsack.cpp")
#add_executable(CN_RodCutting "Dynamic Programming/CodingNinjas Rod cutting problem .cpp")
#add_executable(CN_LongestCommonSubstring "Dynamic Programming/CodingNinjas Longest Common Substring .cpp")

#add_executable(CF189A "Dynamic Programming/Codeforces 189A Cut Ribbon.cpp")
#add_executable(CF1057C "Dynamic Programming/Codeforces 1057C Tanya and Colored Candies.cpp")
#add_executable(CF550 "Dynamic Programming/Codeforces 550A Two Substrings.cpp")
#add_executable(CF489C "Dynamic Programming/Codeforces 489C Given Length and Sum of Digits.cpp")
#add_executable(CF545C "Dynamic Programming/Codeforces 545C Woodcutters.cpp")
#add_executable(CF706C "Dynamic Programming/Codeforces 706C Hard Problem.cpp")
#add_executable(CF456C "Dynamic Programming/Codeforces 456C Boredom.cpp")
#add_executable(CF711C "Dynamic Programming/Codeforces 711C Coloring Trees.cpp")
#add_executable(CF711C "Dynamic Programming/Codeforces 711C Coloring Trees.cpp")
#add_executable(CF366C "Dynamic Programming/Codeforces 366C Dima and Salad.cpp")
#add_executable(CF225C "Dynamic Programming/Codeforces 225C Barcode.cpp")
#add_executable(CF699C "Dynamic Programming/Codeforces 699C Vacations.cpp")
#add_executable(CF270D "Dynamic Programming/Codeforces 270D Greenhouse Effect.cpp")
#add_executable(CF506A "Dynamic Programming/Codeforces 506A Mr. Kitayuta, the Treasure Hunter.cpp")
#add_executable(CF1272C "Dynamic Programming/Codeforces 1272C Yet Another Broken Keyboard.cpp")
#add_executable(CF580D "Dynamic Programming/Codeforces 580D Kefa and Dishes.cpp")
#add_executable(CF101B "Dynamic Programming/Codeforces 101B Buses.cpp")
#add_executable(CF1042B "Dynamic Programming/Codeforces 1042B Vitamins.cpp")
#add_executable(CF118D "Dynamic Programming/Codeforces 118D Caesar's Legions.cpp")
#add_executable(CF431C "Dynamic Programming/Codeforces 431C k-Tree.cpp")
#add_executable(CF474D "Dynamic Programming/Codeforces 474D Flowers.cpp")
#add_executable(CF1195C "Dynamic Programming/Codeforces 1195C Basketball Exercise.cpp")
#add_executable(CF830A "Dynamic Programming/Codeforces 830A Office Keys.cpp")
#add_executable(CF1033C "Dynamic Programming/Codeforces 1033C Permutation Game.cpp")
#add_executable(CF1245C "Dynamic Programming/Codeforces 1245C Constanze's Machine.cpp")
#add_executable(CF1380C "Dynamic Programming/Codeforces 1380C Create The Teams.cpp")
#add_executable(CF1842C "Dynamic Programming/Codeforces 1842C Tenzing and Balls.cpp")
#add_executable(CF1845C "Dynamic Programming/Codeforces 1845C Strong Password.cpp")
#add_executable(CF478D "Dynamic Programming/Codeforces 478D Red-Green Towers.cpp")
#add_executable(CF1555C "Dynamic Programming/Codeforces 1555C Coin Rows.cpp")
#add_executable(CF1057C "Dynamic Programming/Codeforces 1057C Tanya and Colored Candies.cpp")
#add_executable(CF534B "Dynamic Programming/Codeforces 534B Covered Path.cpp")
#add_executable(UVA825 "Dynamic Programming/UVA 825 Walking on the Safe Side.cpp")
#add_executable(UVA10337 "Dynamic Programming/UVA 10337 Flight Planner.cpp")
#add_executable(UVA11341 "Dynamic Programming/UVA 11341 Term Strategy.cpp")
#add_executable(UVA10130 "Dynamic Programming/UVA 10130 SuperSale.cpp")
#add_executable(UVA10131 "Dynamic Programming/UVA 10131 Is Bigger Smarter.cpp")
#add_executable(UVA531 "Dynamic Programming/UVA 531 Compromise.cpp")
#add_executable(UVA147 "Dynamic Programming/UVA 147 Dollars.cpp")
#add_executable(UVA357 "Dynamic Programming/UVA 357 Let Me Count The Ways.cpp")

#add_executable(CF1037C "Misc/Codeforces 1037C Equalize.cpp")

#add_executable(UVA10106 "Number Theory/UVA 10106 Product.cpp")
#add_executable(UVA713 "Number Theory/UVA 713 Adding Reversed Numbers.cpp")
#add_executable(UVA10370 "Number Theory/UVA 10370 Above Average.cpp")
#add_executable(UVA408 "Number Theory/UVA 408 Uniform Generator.cpp")
#add_executable(UVA10006 "Number Theory/UVA 10006 Carmichael Numbers.cpp")
#add_executable(UVA374 "Number Theory/UVA 374 Big Mod.cpp")
#add_executable(CF284A "Number Theory/Codeforces 284A Cows and Primitive Roots.cpp")
#add_executable(UVA406 "Number Theory/UVA 406 Prime Cuts.cpp")
#add_executable(UVA10168 "Number Theory/UVA 10168 Summation of Four Primes.cpp")
#add_executable(UVA10789 "Number Theory/UVA 10789 Prime Frequency.cpp")
#add_executable(UVA583 "Number Theory/UVA 583 Prime Factors.cpp")
#add_executable(UVA10650 "Number Theory/UVA 10650 Determinate Prime.cpp")
#add_executable(UVA160 "Number Theory/UVA 160 Factors and Factorials.cpp")
#add_executable(CF762A "Number Theory/Codeforces 762A k-th divisor.cpp")
#add_executable(CF664A "Number Theory/Codeforces 664A Complicated GCD.cpp")
#add_executable(CF1458A "Number Theory/Codeforces 1458A Row GCD.cpp")
#add_executable(CF735D "Number Theory/Codeforces 735D Taxes.cpp")
#add_executable(CF235A "Number Theory/Codeforces 235A LCM Challenge.cpp")
#add_executable(CF1900D "Number Theory/Codeforces 1900D Small GCD.cpp")
#add_executable(CF1872C "Number Theory/Codeforces 1872C Non-coprime Split.cpp")

#add_executable(CF1941  "Codeforces Div3/A.1941 Rudolf and the Ticket (1941A) .cpp"
#        "Codeforces Div3/C.1941 Rudolf and the Ugly String (1941C).cpp"
#        "Codeforces Div3/B.1941 Rudolf and 121 (1941B).cpp"
#        "Codeforces Div3/D.1941 Rudolf and the Ball Game (1941D).cpp"
#        "Codeforces Div3/E.1941 Rudolf and k Bridges (1941E).cpp"
#        "Codeforces Div3/F.1941 Rudolf and imbalance (1941F).cpp"
#        )
#add_executable(CF1945
#        "Codeforces Div3/A.1945 Setting up Camp (1945A).cpp"
#        "Codeforces Div3/B.1945 Fireworks (1945B).cpp"
#        "Codeforces Div3/C.1945 Left and Right Houses (1945C).cpp"
#        "Codeforces Div3/D.1945 Seraphim the Owl(1945D).cpp"
#)
#add_executable(CF1995D "Codeforces Div3/D.1955 Inaccurate Subsequence Search (1955D).cpp")
#add_executable(CF304C "Codeforces Div2/C.304 Lucky Permutation Triple (304C).cpp")
#add_executable(CF546C "Codeforces Div2/C.546 Soldier and Cards (546C).cpp")
#add_executable(CF651C "Codeforces Div2/C.651 Watchmen (651C).cpp")
#add_executable(CF371B "Codeforces Div2/B.371 Fox Dividing Cheese (371B).cpp")
#add_executable(CF588B "Codeforces Div2/B.588 Duff in Love (588B).cpp")
#add_executable(CF371C "Codeforces Div2/C.371 Hamburgers (371).cpp")
#add_executable(CF437B "Codeforces Div2/B.437 The Child and Set (437B).cpp")
#add_executable(CF518B "Codeforces Div2/B.518 Tanya and Postcard (518B).cpp")
#add_executable(CF296C "Codeforces Div2/C.296 Greg and Array (296C).cpp")
#add_executable(CF131C "Codeforces Div2/C.131 The World is a Theatre (131C).cpp")
#add_executable(CF88C "Codeforces Div2/C.88 Trains (88C).cpp")
#add_executable(CF378B "Codeforces Div2/B.378 Semifinals (378B).cpp")
#add_executable(CF479B "Codeforces Div2/B.479 Towers (479B).cpp")
#add_executable(CF402C "Codeforces Div2/C.402 Searching for Graph (402C).cpp")
#add_executable(CF227C "Codeforces Div2/C.227 Flying Saucer Segments (227C).cpp")
#add_executable(CF1955C "Codeforces Div3/C.1955 Inhabitant of the Deep Sea (1955C).cpp")
#add_executable(CF1954A "Codeforces Div2/A.1954 Painting the Ribbon (1954A).cpp")
#add_executable(CF1954B "Codeforces Div2/B.1954 Make It Ugly (1954B).cpp")
#add_executable(CF1954C "Codeforces Div2/C.1954 Long Multiplication (1954C).cpp")
#add_executable(CF1954D "Codeforces Div2/C.1895 Torn Lucky Ticket (1895C).cpp")
#add_executable(CF577C "Codeforces Div2/C.577 Vasya and Petya's Game(577C).cpp")
#add_executable(CF1946A "Codeforces Div2/A.1946 Median of an Array (1946A).cpp")
#add_executable(CF1946B "Codeforces Div2/B.1946 Maximum Sum (1946B).cpp")
#add_executable(CF1946B "Codeforces Div2/C.1946 C. Tree Cutting (1946C).cpp")
#add_executable(CF1956A "Codeforces Div2/A.1956 Nene's Game (1956A).cpp")
#add_executable(CF1956B "Codeforces Div2/B.1956 Nene and the Card Game (1956B).cpp")
#add_executable(CF1956C "Codeforces Div2/C.1956 Nene's Magical Matrix (1956C).cpp")
#add_executable(CF1946C "Codeforces Div2/C.1946 C. Tree Cutting (1946C).cpp")
#add_executable(CF71C "Codeforces Div2/C.71 Round Table Knights (71C).cpp")
#add_executable(CF580C "Codeforces Div2/C.580 Kefa and Park (580C).cpp")
#add_executable(CF357C "Codeforces Div2/C.357 Knight Tournament.cpp")
#add_executable(CF219B "Codeforces Div2/B.219 Special Offer! Super Price 999 Bourles! (219B).cpp")
#add_executable(CF424C "Codeforces Div2/C.424 Magic Formulas (424C).cpp")
#add_executable(CF707C "Codeforces Div2/C.707 Pythagorean Triples (707C).cpp")
#add_executable(CF560C "Codeforces Div2/C.560 Gerald's Hexagon (560C).cpp")
#add_executable(CF252C "Codeforces Div2/C.252 Points on Line (252C).cpp")
#add_executable(CF353C "Codeforces Div2/C.353 Find Maximum (353C).cpp")
#add_executable(CF450B "Codeforces Div2/B.450 Jzzhu and Sequences (450B).cpp")
#add_executable(CF570B "Codeforces Div2/B.570 Simple Game (570B).cpp")
#add_executable(CF271B "Codeforces Div2/B.271 Prime Matrix (271B).cpp")
#add_executable(CF344C "Codeforces Div2/C.344 Rational Resistance (344C).cpp")
#add_executable(CF275C "Codeforces Div2/C.275 k-Multiple Free Set (275C).cpp")
#add_executable(CF534C "Codeforces Div2/C.534 Polycarpus' Dice (534C).cpp")
#add_executable(CF631B "Codeforces Div2/B.631 Print Check (631B).cpp")
#add_executable(CF257B "Codeforces Div2/B.257 Playing Cubes (257B).cpp")
#add_executable(CF230B "Codeforces Div2/B.230 T-pimes (230B).cpp")
#add_executable(CF378C "Codeforces Div2/C.378 Maze (378C).cpp")
#add_executable(CF706C "Codeforces Div2/C.706 Hard Problem (706C).cpp")
#add_executable(CF405C "Codeforces Div2/C.405 Unusual Product (405C).cpp")
#add_executable(CF486C "Codeforces Div2/C.486 Palindrome Transformation (486C).cpp")
#add_executable(CF496C "Codeforces Div2/C.496 Removing Columns (496C).cpp")
#add_executable(CF490B "Codeforces Div2/B.490 Queue (490B).cpp")
#add_executable(CF610B "Codeforces Div2/B.610 Vika and Squares (610B).cpp")
#add_executable(CF222B "Codeforces Div2/B.222 Cosmic Tables (222B).cpp")

#add_executable(CF253C "Codeforces Div2/C.253 Text Editor (253C).cpp")
#add_executable(CF604C "Codeforces Div2/C.604 Alternative Thinking (604C).cpp")
#add_executable(CF735C "Codeforces Div2/C.735 Tennis Championship (735C).cpp")
#add_executable(CF795A "Codeforces Div2/A.1691 Beat The Odds (1691A).cpp")
#add_executable(CF795B "Codeforces Div2/B.1691  Shoe Shuffling (1691B).cpp")
#add_executable(CF795C "Codeforces Div2/C.1691 Sum of Substrings (1691C).cpp")
#add_executable(CF456C "Codeforces Div2/C.456 Boredom (456C).cpp")
#add_executable(CF225C "Codeforces Div2/C.225 Barcode (225C).cpp")
#add_executable(CF505C "Codeforces Div2/C.505 Mr. Kitayuta, the Treasure Hunter.cpp")
add_executable(CF1957C "Codeforces Div2/C.1957.cpp ")
#add_executable(CF1957A "Codeforces Div2/A.1957.cpp")
#add_executable(CF1957B "Codeforces Div2/B.1957.cpp")
#add_executable(CF1966C "Codeforces Div2/C.1966 Everything Nim .cpp")
#add_executable(CF1966A "Codeforces Div2/A.1966 Card Exchange .cpp")
#add_executable(CF1966B "Codeforces Div2/B.1966 Rectangle Filling .cpp")
#add_executable(CF35D "Codeforces Div2/D.35 Animals.cpp" )
#add_executable(CF711C "Codeforces Div2/C.711 Coloring Trees (711C).cpp")
#add_executable(CF270D "Codeforces Div2/D.270 Greenhouse Effect.cpp")
#add_executable(CF265D "Codeforces Div2/D.265 Good Sequences.cpp")
#add_executable(CF467C "Codeforces Div2/C.467 George and Job(467C).cpp")

#add_executable(ACdpC "Dynamic Programming/AtCoder - dp_c Vacation .cpp")
#add_executable(ACdpA "Dynamic Programming/AtCoder - dp_a Frog 1 .cpp")
#add_executable(ACdpB "Dynamic Programming/AtCoder - dp_b Frog 2.cpp")
#add_executable(ACdpD "Dynamic Programming/AtCoder - dp_d Knapsack 1.cpp")
#add_executable(ACdpH "Dynamic Programming/AtCoder - dp_h Grid 1.cpp")
#add_executable(ACdpG "Dynamic Programming/AtCoder - dp_g Longest Path.cpp")
#add_executable(ACdpE "Dynamic Programming/AtCoder dp_e Knapsack 2.cpp")
#add_executable(SPOJ1 "Dynamic Programming/SPOJ ELIS Easy Longest Increasing Subsequence .cpp")
#add_executable(SPOJ2 "Dynamic Programming/SPOJ BYTESM2 Philosophers Stone .cpp")
#add_executable(UVA10036 "Dynamic Programming/UVA 10036 Divisibility .cpp")
#add_executable(UVA10192 "Dynamic Programming/UVA10192 UVA Vacation.cpp")
#add_executable(UVA562 "Dynamic Programming/UVA 562 Dividing coins .cpp")
#add_executable(UVA10534 "Dynamic Programming/UVA 10534 Wavio Sequence.cpp")
#add_executable(UVA12346 "Dynamic Programming/UVA 12346 Water Gate Management.cpp")

#add_executable(CF1969A "Codeforces Div2/A.1969.cpp")
#add_executable(CF1969B "Codeforces Div2/B.1969.cpp")
#add_executable(CF1969C "Codeforces Div2/C.1969.cpp")
#add_executable(CF1969A "Codeforces Div2/A.1972.cpp")
#add_executable(CF1969B "Codeforces Div2/B.1972.cpp")
#add_executable(CF1969C "Codeforces Div2/C.1972.cpp")
#add_executable(CF431C "Codeforces Div2/C.431 K-Tree.cpp")
#add_executable(CF118D "Codeforces Div2/D.118 Caesar's Legion.cpp")
#add_executable(CF56D "Dynamic Programming/Codeforces 56D Changing a String.cpp")
#add_executable(CF1005D "Codeforces Div2/D.1005 Polycarp and Div 3.cpp")

#add_executable(CF792C "Codeforces Div2/C.792 Divide by Three (792C).cpp")
#add_executable(ATCDPN "Dynamic Programming/AtCoder - dp_n Slimes.cpp")
#add_executable(CF1133E "Dynamic Programming/Codeforces 1133E K Balanced Teams.cpp")
#add_executable(ATCdpk "Dynamic Programming/AtCoder - dp_k Stones.cpp")
#add_executable(ATCdpf "Dynamic Programming/AtCoder - dp_f LCS.cpp")
#add_executable(ATCdpI "Dynamic Programming/AtCoder - dp_I deque.cpp")
#add_executable(CF598E "Dynamic Programming/Codeforces 598E Chocolate Bar.cpp")
#add_executable(CF988F "Dynamic Programming/Codeforces 988F Rain and Umbrellas.cpp")
#add_executable(CF1066F "Dynamic Programming/Codeforces 1066F Yet another 2D Walking.cpp")
#add_executable(CF1154F "Dynamic Programming/Codeforces 1154F Shovels Shop.cpp")
#add_executable(CF1077F1 "Dynamic Programming/Codeforces 1077F1 Pictures with Kittens.cpp")
#add_executable(CF1036C "Dynamic Programming/Codeforces 1036C Classy Numbers.cpp")
#add_executable(CF628D "Dynamic Programming/Codeforces 628D Magic Numbers.cpp")
#
#add_executable(CF1986A "Codeforces Div3/A.1986.cpp")
#add_executable(CF1986B "Codeforces Div3/B.1986.cpp")
#add_executable(CF1986C "Codeforces Div3/C.1986.cpp")
#add_executable(CF1986D "Codeforces Div3/D.1986.cpp")
#add_executable(CF1986E "Codeforces Div3/E.1986.cpp")
#add_executable(CF1986F "Codeforces Div3/F.1986.cpp")

#add_executable(CF246D "Graphs/D.246 Colorful Graph.cpp")
#add_executable(CF216B "Graphs/B.216 Forming Teams.cpp")
#add_executable(CF1552B "Graphs/B.1552 Running for Gold.cpp")
#add_executable(CF330B "Graphs/B.330 Road Construction.cpp")
#add_executable(CF1143C "Graphs/C.1143 Queen.cpp")
#add_executable(CF1181A1 "Graphs/A1.1181 Add on a Tree.cpp")
#add_executable(CFccc "Graphs/D.1611 Weights Assignment For Tree Edges.cpp")
#add_executable(CFccc "Graphs/A.115 Party.cpp")
#add_executable(CFccc "Graphs/B.1020 Badge.cpp")
#add_executable(CFccc "Graphs/B.902 Coloring a Tree.cpp")
#add_executable(CFccc "Graphs/E.977 Cyclic Components.cpp")
#add_executable(CFccc "Graphs/E.1176 Cover it.cpp")
#add_executable(CFccc "Graphs/C.29 Mail Stamps.cpp")
add_executable(CFccc "Graphs/C.839 Journey.cpp")

#add_executable(CF1980A "Codeforces Div3/A.1980.cpp")
#add_executable(CF1980B "Codeforces Div3/B.1980.cpp")
#add_executable(CF1980C "Codeforces Div3/C.1980.cpp")
#add_executable(CF1980D "Codeforces Div3/D.1980.cpp")
#add_executable(CF1980E "Codeforces Div3/E.1980.cpp")
#add_executable(CF1980F "Codeforces Div3/F.1980.cpp")

#add_executable(CF1971A "Codeforces Div4/A.1971.cpp")
#add_executable(CF1971B "Codeforces Div4/B.1971.cpp")
#add_executable(CF1971C "Codeforces Div4/C.1971.cpp")
#add_executable(CF1971D "Codeforces Div4/D.1971.cpp")
#add_executable(CF1971E "Codeforces Div4/E.1971.cpp")
#add_executable(CF1971F "Codeforces Div4/F.1971.cpp")
#add_executable(CF1971G "Codeforces Div4/G.1971.cpp")

#add_executable(Rec1 "recording/Divide by three.cpp")
#add_executable(Rec2 "recording/Yet Another 2D Walking.cpp")